[package]
name = "icie"
version = "0.7.1"
authors = ["Mateusz Cegiełka <mateusz@cegla.net>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
async-trait = "0.1"
evscode = { path = "./evscode" }
futures-preview = { version = "0.3.0-alpha.19", features = ["async-await"] }
itertools = "0.8"
js-sys = "0.3"
keytar-sys = { path = "./keytar-sys" }
lazy_static = "1.0"
log = "0.4"
node-sys = { path = "node-sys" }
once_cell = "1.3"
regex = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "1.0"
unijudge = { path = "./unijudge" }
unijudge-atcoder = { path = "./unijudge-atcoder" }
unijudge-codechef = { path = "./unijudge-codechef" }
unijudge-codeforces = { path = "./unijudge-codeforces" }
unijudge-sio2 = { path = "./unijudge-sio2" }
unijudge-spoj = { path = "./unijudge-spoj" }
vscode-sys = { path = "./vscode-sys" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[patch.crates-io]
cookie = { git = "https://github.com/SergioBenitez/cookie-rs/" }
js-sys = { git = "https://github.com/pustaczek/wasm-bindgen", branch = "hack-window-conflict" }
time = { git = "https://github.com/pustaczek/time", branch = "icie" }
wasm-bindgen = { git = "https://github.com/pustaczek/wasm-bindgen", branch = "hack-window-conflict" }
wasm-bindgen-futures = { git = "https://github.com/pustaczek/wasm-bindgen", branch = "hack-window-conflict" }
web-sys = { git = "https://github.com/pustaczek/wasm-bindgen", branch = "hack-window-conflict" }

[workspace]
members = [
	".",
	"evscode",
	"evscode-codegen",
	"keytar-sys",
	"node-sys",
	"unijudge",
	"unijudge-atcoder",
	"unijudge-codechef",
	"unijudge-codeforces",
	"unijudge-sio2",
	"unijudge-spoj",
	"vscode-extension-telemetry-sys",
	"vscode-sys",
]
