[package]
name = "evscode"
version = "0.1.0"
authors = ["Mateusz Cegiełka <mateusz@cegla.net>"]
edition = "2018"

[dependencies]
async-trait = "0.1"
evscode-codegen = { path = "../evscode-codegen" }
futures-preview = "0.3.0-alpha.19"
js-sys = "0.3"
log = { version = "0.4", features = ["std"] }
node-sys = { path = "../node-sys" }
once_cell = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
vscode-extension-telemetry-sys = { path = "../vscode-extension-telemetry-sys" }
vscode-sys = { path = "../vscode-sys" }
wasm-backtrace = { path = "../wasm-backtrace" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
