[package]
name = "icie-logic"
version = "0.1.0"
authors = ["Mateusz Cegiełka <mateusz@cegla.net>"]
edition = "2018"

[dependencies]
ci = { path = "../../ci" }
failure = "0.1.3"
rand = "0.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
backtrace = "0.3"
dirs = "1.0"
unijudge = { git = "https://github.com/matcegla/unijudge" }
open = "1.2"