[package]
name = "unijudge-codechef"
version = "0.1.0"
authors = ["Mateusz Cegiełka <mateusz@cegla.net>"]
edition = "2018"

[dependencies]
async-trait = "0.1.11"
unijudge = { path = "../unijudge" }
pulldown-cmark = { version = "0.8", default-features = false }
regex = { version = "1.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
html-escape = { version ="*"}
markdown = {git = "https://github.com/georgejsh/markdown.rs"}
node-sys = { path = "../node-sys" }
urlencoding = "2.1.0"
linked-hash-map = "0.5.6"