[package]
name = "unijudge"
version = "0.1.0"
authors = ["Mateusz Cegiełka <mateusz@cegla.net>"]
edition = "2018"

[dependencies]
async-trait = "0.1"
backtrace = "0.3"
cookie = "0.12"
cookie_store = "0.9"
chrono = "0.4"
debris = { git = "https://github.com/pustaczek/debris" }
ego-tree = "0.6"
hex = "0.3"
html5ever = "0.24"
http = "0.1"
log = "0.4"
reqwest = { git = "https://github.com/pustaczek/reqwest", branch = "dirty-acookies", default-features = false }
scraper = { git = "https://github.com/pustaczek/scraper", default-features = false }
selectors = "0.21"
serde = "1.0"
serde_json = "1.0"
url = "2.0"
