[package]
name = "unijudge"
version = "0.1.0"
authors = ["Mateusz Cegiełka <mateusz@cegla.net>"]
edition = "2018"

[dependencies]
async-trait = "0.1"
cookie = "0.12"
chrono = "0.4"
debris = { git = "https://github.com/pustaczek/debris" }
ego-tree = "0.6"
hex = "0.4"
html5ever = "0.24"
http = "0.1"
log = "0.4"
reqwest = { git = "https://github.com/pustaczek/reqwest", features = ["cookies"], branch = "icie" }
scraper = { version = "0.11", default-features = false }
selectors = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.0"
